# grant_oglesby_capstone_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: db_config.py  env_config.py
data/: source.txt
data/load/: go_capstone_data.csv
data/transform/: transformed_data.csv
notebooks/: analysis.ipynb  transform.ipynb
scripts/: run_etl.py
src/extract/: extract.py  extract_request.py  read_source.py
src/load/: load.py  load_database.py
src/transform/: clean_co2.py  clean_energy.py  transform.py
src/utils/: db_utils.py
streamlit/: main.py
streamlit/pages/: 1_countries.py  1_region.py  2_countries.py  2_region.py  3_compare.py  3_regional_breakdown.py  4_correlations.py
streamlit/text/: 1_frustrated.md  2_panic.md  3_dataset.md  4_extract.md  5_transform_co2.md  6_transform_energy.md  7_transform_combine.md  8_load.md
tests/: conftest.py  run_tests.py
tests/unit_tests/: test_clean_co2.py  test_clean_energy.py  test_db_config.py  test_env_config.py  test_extract.py  test_extract_request.py  test_read_source.py  test_transform.py
